k8-config/creditcard-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-card
spec:
  selector:
    matchLabels:
      app: credit-card
  template:
    metadata:
      labels:
        app: credit-card
    spec:
      containers:
      - name: credit-card
        image: credit-card:v5
        imagePullPolicy: "Never"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: credit-card
spec:
  selector:
    app: credit-card
  ports:
  - port: 8080
    targetPort: 8080
