k8-config/creditcarddb-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-card-db
spec:
  selector:
    matchLabels:
      app: credit-card-db
  template:
    metadata:
      labels:
        app: credit-card-db
    spec:
      containers:
      - name: credit-card-db
        image: credit-card-db:latest
        imagePullPolicy: "Never"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: credit-card-db
spec:
  selector:
    app: credit-card-db
  ports:
  - port: 8080
    targetPort: 8080
