k8-config/merchant-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchant
  template:
    metadata:
      labels:
        app: merchant
    spec:
      containers:
        - name: merchant
          image: merchant:latest
          imagePullPolicy: "Never"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: merchant
  name: merchant
spec:
  selector:
    app: merchant
  ports:
    - port: 8080
      targetPort: 8080
