k8-config/sessionid-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session
spec:
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
      - name: session
        image: session:v1
        imagePullPolicy: "Never"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: session
spec:
  selector:
    app: session
  ports:
  - port: 8080
    targetPort: 8080
